--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,14 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<a href="/signup">Sign Up</a>
+
+{{#if user}}
+<p>Welcome back, {{user.username}}</p>
+<form method="POST" action="/logout">
+  <button type="submit">Logout</button>
+</form>
+<a href="/private">Private</a>
+{{!-- <a href="/logout">log out</a> --}}
+{{else}}
+<a href="/login">Log In</a>
+{{/if}}
