--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,7 @@
 </form>
 <a href="/private">Private</a>
 {{!-- <a href="/logout">log out</a> --}}
+<a href="/zomato">Zomato</a>
 {{else}}
 <a href="/login">Log In</a>
 {{/if}}
