--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <a href="/signup">Sign Up</a>
+<a href="/restaurant-search"></a>
+
 
 {{#if user}}
 <p>Welcome back, {{user.username}}</p>
@@ -9,6 +11,7 @@
 </form>
 <a href="/private">Private</a>
 {{!-- <a href="/logout">log out</a> --}}
+<a href="/restaurant-search"></a>
 <a href="/zomato">Zomato</a>
 {{else}}
 <a href="/login">Log In</a>
