--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <a href="/signup">Sign Up</a>
-<a href="/restaurant-search"></a>
+<a href="/restaurant-search">Restaurant List</a>
 
 
 {{#if user}}
