--- a/views/restaurants-result.hbs
+++ b/views/restaurants-result.hbs
@@ -1,1 +1,73 @@
 <h2>restaurants results</h2>
+
+<div id="map"></div>
+<button type="submit" onclick="showMarkers({{markers}})">Show Markers</button>
+<button type="submit" onclick="getCurrentLocation()">Get current location</button>
+<button type="submit" onclick="calcRoute()">Route</button>
+<button type="submit" onclick="searchPlaces()">Search Places</button>
+
+<script>
+
+  function searchPlaces() {
+    const heden = { lat: 38.7117206, lng: -9.1264315 };
+    let request = {
+      location: heden,
+      radius: "500",
+      type: ["restaurants"]
+    };
+    let service = new google.maps.places.PlacesService(map);
+    service.nearbySearch(request, (results, status) => {
+      if (status === google.maps.places.PlacesServiceStatus.OK) {
+        for (let i = 0; i < results.length; i++) {
+          let lat = results[i].geometry.location.lat();
+          let lng = results[i].geometry.location.lng();
+          setMarker({ lat, lng });
+        }
+      }
+    })
+  }
+
+  function calcRoute() {
+    let directionsService = new google.maps.DirectionsService();
+    let directionsRenderer = new google.maps.DirectionsRenderer();
+    let start = "Santa Apolónia, Lisboa";
+    let end = "Rato, Lisboa";
+    let request = {
+      origin: start,
+      destination: end,
+      travelMode: "DRIVING"
+    };
+    directionsService.route(request, (result, status) => {
+      if (status === "OK") {
+        directionsRenderer.setDirections(result);
+      }
+    })
+    directionsRenderer.setMap(map);
+  }
+
+  function showMarkers(markers) { // Markers will be an array of objects with {lat, lgn }
+    markers.forEach((marker) => {
+      setMarker(marker);
+    });
+  }
+
+  function setMarker(marker) {
+    new google.maps.Marker({
+      position: marker,
+      map: map
+    })
+  }
+
+  function getCurrentLocation() { // Geolocation 
+    navigator.geolocation.getCurrentPosition((position) => {
+      const pos = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      }
+      map.setCenter(pos);
+      map.setZoom(13);
+    });
+  }
+
+
+</script>
