--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,28 +12,16 @@
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   <script src="https://maps.googleapis.com/maps/api/js?key={{gmapKey}}&callback=initMap&libraries=places&v=weekly"
     defer></script>
-  <!--> <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    #map {
-      position: relative;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-  <!-->
 </head>
 
 <body>
 
   {{{body}}}
-
+  <script src="/javascripts/axios.js"></script>
   <script src="/javascripts/script.js"></script>
+
 
 </body>
 
