--- a/views/restaurants-result.hbs
+++ b/views/restaurants-result.hbs
@@ -1,12 +1,24 @@
-<h2>restaurants results</h2>
+<h2>Where you want to go?</h2>
 
 <div id="map"></div>
-<button type="submit" onclick="showMarkers({{markers}})">Show Markers</button>
+<!--<button type="submit" onclick="showMarkers({{markers}})">Show Markers</button>-->
+<!--<button type="submit" onclick="calcRoute()">Route</button>-->
+<div>
+  <form>
+    <label for="start">
+      <input type="text" name="route-search-start" placeholder="starting point">
+    </label>
+    <label for="end">
+      <input type="text" name="route-search-end" placeholder="destination">
+    </label>
+    <button type="submit" onclick="calcRoute()">Select route</button>
+  </form>
+</div>
 <button type="submit" onclick="getCurrentLocation()">Get current location</button>
-<button type="submit" onclick="calcRoute()">Route</button>
 <button type="submit" onclick="searchPlaces()">Search Places</button>
 
 <script>
+  /*
   const zomatoAPI = axios.create({
     baseURL: 'https://developers.zomato.com/api/v2.1/',
     headers: { 'user-key': "83cd93e9820f4153649a4d837be70144" }
@@ -24,8 +36,6 @@
         order: "desc",
         lat: restaurant.geometry.location.lat(),
         lon: restaurant.geometry.location.lng()
-
-
       }
     }).then((response) => {
       console.log(restaurant.name)
@@ -34,11 +44,12 @@
   }
 
   let firstRestaurant;
+*/
   function searchPlaces() {
     const heden = { lat: 38.7117206, lng: -9.1264315 };
     let request = {
       location: heden,
-      radius: "500",
+      radius: "100",
       type: ["restaurant"]
     };
     let service = new google.maps.places.PlacesService(map);
@@ -49,19 +60,22 @@
           let lng = results[i].geometry.location.lng();
           setMarker({ lat, lng });
         }
-        console.log(results)
-        firstRestaurant = results[3];
-        console.log(firstRestaurant)
-        getFirst(firstRestaurant)
+        //   console.log(results)
+        //   firstRestaurant = results[3];
+        //   console.log(firstRestaurant)
+        //   getFirst(firstRestaurant)
       }
     })
   }
 
+
   function calcRoute() {
     let directionsService = new google.maps.DirectionsService();
     let directionsRenderer = new google.maps.DirectionsRenderer();
-    let start = "Santa Apolónia, Lisboa";
-    let end = "Rato, Lisboa";
+    //let start = "Santa Apolónia, Lisboa";
+    // let end = "Rato, Lisboa";
+    let start = document.getElementById('start').value;
+    let end = document.getElementById('end').value;
     let request = {
       origin: start,
       destination: end,
@@ -75,6 +89,7 @@
     directionsRenderer.setMap(map);
   }
 
+
   function showMarkers(markers) { // Markers will be an array of objects with {lat, lgn }
     markers.forEach((marker) => {
       setMarker(marker);
@@ -87,6 +102,7 @@
       map: map
     })
   }
+
 
   function getCurrentLocation() { // Geolocation 
     navigator.geolocation.getCurrentPosition((position) => {
