--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
-<a href="/signup">Sign Up</a>
+{{#unless user}}
+<a href="/signup" id="signup">Sign Up</a>
+{{/unless}}
 
 {{#if user}}
 <p>Welcome back, {{user.username}}</p>
