--- a/views/restaurants-result.hbs
+++ b/views/restaurants-result.hbs
@@ -119,7 +119,7 @@
         const markerStreetart = new google.maps.Marker({
           position: new google.maps.LatLng(Number(element.lat), Number(element.lng)),
           map: map,
-          icon: '../images/map_marker_black.png'
+          icon: 'https://res.cloudinary.com/dt9z4xs6m/image/upload/v1605712720/purple-stars_t8wddi.png'
 
         });
         console.log(element)
