--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
 
 {{#if user}}
 <p>Welcome back, {{user.username}}</p>
-<a href="/restaurant-search">Choose your Route</a>
+<a href="/route-search">Choose your Route</a>
 <form method="POST" action="/logout">
   <button type="submit">Logout</button>
 </form>
