--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -122,7 +122,7 @@
           icon: 'https://res.cloudinary.com/dt9z4xs6m/image/upload/v1605712720/purple-stars_t8wddi.png'
 
         });
-        console.log(element)
+        //  console.log(element)
         //streetarts.push(markerStreetart);
       })
     })
