--- a/views/route-result.hbs
+++ b/views/route-result.hbs
@@ -117,7 +117,7 @@
   let streetarts = [];
   function getstreetart() {
 
-    return axios.get('/api/streetart').then((results) => {
+    return axios.get('/api/all').then((results) => {
       streetarts = results.data.results;
 
     })
@@ -144,7 +144,7 @@
 					</div>
 				</div></a>`
 
-        console.log(element)
+        //console.log(element)
         //streetarts.push(markerStreetart);
         const infowindow = new google.maps.InfoWindow({
           content: contentString,
