--- a/views/streetarts-create.hbs
+++ b/views/streetarts-create.hbs
@@ -7,12 +7,8 @@
   <label>
     Name or Description
     <textarea name="name_description" cols="30" rows="4"></textarea>
-  </label>
-  <label>
-    Other Location Notes
-    <input type="text" name="other_location_note" value="{{streetart.other_location_note}}">
-  </label>
-  <br>
+  </label> <br>
+
   <label>
     Address
     <input type="double" name="address">
@@ -25,6 +21,12 @@
     Longitude
     <input type="double" name="longitude">
   </label>
+  <label><br>
+
+    Other Location Notes
+    <input type="text" name="other_location_note" value="{{streetart.other_location_note}}">
+  </label>
+
   <label>
     Comment
     <textarea name="comment" cols="30" rows="4"></textarea>
