--- a/views/streetarts-edit.hbs
+++ b/views/streetarts-edit.hbs
@@ -1,7 +1,7 @@
 <h2>You have the power to edit <br>
 </h2>
 <form action="/streetarts/{{streetart._id}}/edit" method="POST">
-  <img src={{streetart.imageUrl}} class="card-img-top" alt={{title}}>
+  <img src={{streetart.imageUrl}} class="card-img-top" alt={{title}}><br>
   <label>
     Artist
     <input type="text" name="artist" value="{{streetart.artist}}">
