--- a/views/streetarts-list.hbs
+++ b/views/streetarts-list.hbs
@@ -1,13 +1,15 @@
 <h1>Lisbon's Best Street Art</h1>
-<hr>
-{{#each streetarts}}
-<div>
-  <p>{{name_description}}</p>
-  <p>by: {{artist}}</p>
-  <a href="/streetarts/{{_id}}">See details</a>
-  <a href="/streetarts/{{_id}}/edit">Edit</a>
-  <form action="/streetarts/{{_id}}/delete" method="POST">
-    <button type="submit">Delete</button>
-  </form>
-</div>
-{{/each}}
+<ul>
+  {{#each streetarts}}
+  <li>
+    <p><img src={{imageUrl}} class="card-img-top" alt={{title}}></p>
+    <p>{{name_description}}</p>
+    <p>by: {{artist}}</p>
+    <a href="/streetarts/{{_id}}">See details</a>
+    <a href="/streetarts/{{_id}}/edit">Edit</a>
+    <form action="/streetarts/{{_id}}/delete" method="POST">
+      <button type="submit">Delete</button>
+    </form>
+  </li>
+  {{/each}}
+</ul>
